--- a/index.html
+++ b/index.html
@@ -9,24 +9,25 @@
             font-family: Arial, sans-serif;
             text-align: center;
             margin: 50px;
-            background-color: #f4f4f4;
+            background-color: #0A192F; /* Gece mavisi arka plan */
+            color: #E0F2F1; /* Açık yeşilimsi yazılar */
         }
         .container {
             max-width: 600px;
             margin: auto;
-            background: white;
+            background: #113C38; /* Nefti yeşili kutu */
             padding: 20px;
             border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
         }
         h1 {
-            color: #d9534f;
+            color: #FFD700; /* Altın sarısı başlık */
         }
         p {
-            color: #333;
+            color: #E0F2F1;
         }
         a {
-            color: #007bff;
+            color: #4FC3F7; /* Açık mavi linkler */
             text-decoration: none;
         }
         a:hover {
